--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/camelize": "^1.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/knex": "^0.16.1",
     "@types/nodemon": "^1.19.6",
     "@types/pg": "^8.11.6",
@@ -29,9 +31,11 @@
   },
   "dependencies": {
     "@types/node": "^20.14.11",
+    "bcrypt": "^5.1.1",
     "camelize": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
