--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/camelize": "^1.0.0",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/joi": "^17.2.3",
@@ -34,6 +35,7 @@
     "@types/node": "^20.14.11",
     "bcrypt": "^5.1.1",
     "camelize": "^1.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
