add validation and add statistics on home

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/multer": "^1.4.11",
     "@types/node": "^22.0.0",
+    "@types/nodemailer": "^6.4.15",
     "@types/universal-router": "^8.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
@@ -20,10 +22,13 @@
     "@arction/lcjs": "^5.2.0",
     "@types/google.maps": "^3.55.12",
     "axios": "^1.7.2",
+    "bootstrap": "^3.4.1",
     "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
-    "universal-router": "^9.2.0"
+    "nodemailer": "^6.9.14",
+    "universal-router": "^9.2.0",
+    "winston": "^3.13.1"
   }
 }
