--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,6 @@ DB_PORT=<DB_PORT>
 DB_USER=<DB_USER>
 DB_PASSWORD=<DB_PASSWORD>
 DB_NAME=<DB_NAME>
+
+EMAIL_USER=<EMAIL_USER>
+EMAIL_PASSWORD=<EMAIL_PASSWORD>
