--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bootstrap": "^5.2.10",
+    "@types/jquery": "^3.5.30",
     "@types/multer": "^1.4.11",
     "@types/node": "^22.0.0",
     "@types/nodemailer": "^6.4.15",
@@ -25,6 +26,7 @@
     "bootstrap": "^3.4.1",
     "chart.js": "^4.4.3",
     "cors": "^2.8.5",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
