add eventhandler and manage frontend

--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/nodemon": "^1.19.6",
     "@types/pg": "^8.11.6",
+    "@types/pusher-js": "^5.1.0",
     "@types/to-snake-case": "^1.0.2",
     "@types/twilio": "^3.19.3",
     "@types/typescript": "^2.0.0",
@@ -48,6 +49,8 @@
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "to-snake-case": "^1.0.0",
     "ts-node": "^10.9.2",
     "twilio": "^5.2.2",
